-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.0
-
None
-
None
-
833d391917901b72c4c977bea0f6b3396dc4ed48
...please do not do this for Qt 4.6.x... 4.7 is good.
QTSIM-9 requrires a generation of a new "simulated S60Style theme blob".
The simulated uses Qt's enum key name introspection to map a key to an actual .svg file. That mechanism requires that the enums keys names are valid s60 theme names. There is however a typo: It has a SP_QsnFrSctrlButton* although it should be SP_QgnFrSctrlButton* (incorrectly has 'Qsn' instead of 'Qgn' prefix). The simulated theming fails because of that.
The renaming of the enum keys has no impact on the S60style erunning on Symbian, because there, the enum key name introspection is not used.
Please also rename:
SP_QsnFrListPressed -> SP_QsnFrListCenterPressed
...and...
SP_QgnIndiSubMenu -> SP_QgnIndiSubmenu (EMbmAvkonQgn_indi_submenu)
...and...
SP_QsnFrCaleGSide* -> SP_QsnFrCaleSide* (KAknsIIDQsnFrCaleSide*)
...and...
SP_QsnFrPopupCenter -> SP_QsnFrPopupCenterSubmenu (KAknsIIDQsnFrPopupCenterSubmenu)
...and...
SP_QsnFrPopupSubCenter -> ??? ![]()