Incorrectly named keys in QS60StyleEnums::SkinParts

Some of the internal part names of QS60Style do not match the real
theme item names, making automated tool use to make "theme blob"
for QCreator simulator manual work.

Renamed the parts to match native side names.

Task-number: QTBUG-11053
Reviewed-by: Alessandro Portale